--- a/Online.Web/Views/Home/Index.cshtml
+++ b/Online.Web/Views/Home/Index.cshtml
@@ -147,7 +147,8 @@
                     <div class="clear" style="clear:both;"></div>
                 </div>
                 <div class="video-wrapper">
-                    <gs:video-live id="videoComponent" site="guijinshuzhibo.gensee.com" ctx="webcast" ownerid="6a12ba147f984bc2a7a50f9a99fc898e" />
+                    @*<gs:video-live id="videoComponent" site="guijinshuzhibo.gensee.com" ctx="webcast" ownerid="6a12ba147f984bc2a7a50f9a99fc898e" />*@
+                    <gs:video-live id="videoComponent" site="guijinshuhandan.gensee.com" ctx="webcast" ownerid="6db6be4dfce946dc802b0e8d4f6bfeed" />
                 </div>
             </div>
             <div class="subcolumn-wrapper">
@@ -329,7 +330,7 @@
                         <input type="text" onkeyup="this.value=this.value.replace(/\D/gi,'')" min="1"  value="1" class="giftinputval"/>                        
                         <select class="Selrose">
                             <option>主播</option>
-                            <option>讲师</option>
+                            <option>老师</option>
                         </select>
                         <button class="btngivegift" data-bind="click:GiveGift">送出</button>
                     </div>
